--- a/style.css
+++ b/style.css
@@ -5,4 +5,19 @@
 h1 {
 	color: 	#FF0000; /* Couleur du texte pour H1 */
 	font-family: 'Comic Sans MS', cursive; /* Police d'écriture */
+	text-align: center;
+	text-decoration: underline;
+}
+
+ul {
+    display: flex; /* Déclare le style flex */
+    flex-direction: row; /* La direction suit une ligne */ 
+    flex-wrap: wrap;  /* Les éléments flexibles sont disposé sur plusieurs lignes */
+}
+
+p {
+    text-align: center; /* Texte centrer */
+	width: 40px; 
+	height: 40px;
+	border: 1px dotted #FEFEFE; /* Bordure */
 }
