--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ h1 {
 	font-family: 'Comic Sans MS', cursive; /* Police d'écriture */
 	text-align: center;
 	text-decoration: underline;
+	padding: 10px;
+	border-radius: 40px;
+	background: #CECECE;
 }
 
 ul {
@@ -16,8 +19,11 @@ ul {
 }
 
 p {
-    text-align: center; /* Texte centrer */
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 40px; 
 	height: 40px;
 	border: 1px dotted #FEFEFE; /* Bordure */
+	background: #CECECE;
 }
