--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ ul {
     flex-wrap: wrap;  /* Les éléments flexibles sont disposé sur plusieurs lignes */
 }
 
-p {
+li {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -26,4 +26,5 @@ p {
 	height: 39px;
 	border: 1px dotted #FEFEFE; /* Bordure */
 	background: #CECECE;
+	color: #FF0000;
 }
